# Annotate

./: CMakeLists.txt  README.md  actionType.txt.example  aprocess.cpp  aprocess.h  clp.cpp  clp.hpp  extract.cpp  main.cpp  mprocessor.cpp  mprocessor.hpp  output.xml.example  output.xml.example.xml  rapidxml.hpp  rapidxml_print.hpp
skcf/: ktrackers.cpp  ktrackers.h  skcfdcf.h
vivalib/: input.cpp  input.h  utils.cpp  utils.h  viva.cpp  viva.h
